--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Full stack project for FreeCodeCamp",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js"
   },
